# Kitti-Stereo-VO

./: CMakeLists.txt  README.md
config/: default.yaml
include/: ORBextractor.h  camera.h  config.h  frame.h  g2o_types.h  map.h  mappoint.h  vo.h
src/: CMakeLists.txt  ORBextractor.cpp  camera.cpp  config.cpp  frame.cpp  g2o_types.cpp  map.cpp  mappoint.cpp  vo.cpp
test/: run_vo.cpp
